@@ -82,6 +82,7 @@ This feature was developed by Karl Hobley and Matt Westcott.
  * Use correct color for labels of radio and checkbox fields (Steven Steinwand)
  * Adjust spacing of fields’ error messages and position in tables (Steven Steinwand)
  * Update dead or redirected links throughout the documentation (LB (Ben) Johnston)
+ * Use different icons for workflow timeline component, so the steps can be distinguished with other means than color (Sam Moran)
 
 ## Upgrade considerations
 
